# tree-sitter-tl

./: CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  bun.lockb  go.mod  grammar.js  highlights.scm  package-lock.json  package.json  pyproject.toml  shell.nix  test.tl  tree-sitter.json
.helix/: config.toml
bindings/go/: binding_test.go  go.mod
bindings/python/tree_sitter_tl/: __init__.py
queries/: highlights.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
