[package]
name = "tree-sitter-tl"
description = "A nix-inspired language"
version = "0.1.0"
authors = ["Whoman"]
license = "GPLv3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/poopypooos/tree-sitter-tl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
