[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-tl"
description = "A nix-inspired language"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "tl"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Whoman" }]
requires-python = ">=3.9"
license.text = "GPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/poopypooos/tree-sitter-tl"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
